+ php/classes/Attendee.php + php/classes/Event.php in db/dbInterface.php  + insertAttendee() in tests/php/classes  +AttendeeTest.php

--- a/config.ini
+++ b/config.ini
@@ -4,5 +4,5 @@ PRIVATE_TOKEN =
 hostname = localhost
 username = root
 db = icdb
-password = null
+password = ldorLAzkwbks05CXuDb0
 charset = utf8mb4
