Add first name retrieval unit test to attendeeTest.php

--- a/config.ini
+++ b/config.ini
@@ -4,5 +4,5 @@ PRIVATE_TOKEN =
 hostname = localhost
 username = root
 db = icdb
-password = ldorLAzkwbks05CXuDb0
+password = null
 charset = utf8mb4
